fixing stretching images safari

--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ p {
 }
 
 .persona {
-    align-items: flex-start;
+    align-items: unset;
     display: flex;
     flex-direction: column;
     padding: 2.5%;
